--- a/Styles/main.css
+++ b/Styles/main.css
@@ -626,54 +626,67 @@ h2 {
 }
 
 .panel-information-detections-table {
-    display: flex;
     height: 95%;
     width: 95%;
-    justify-content: start;
     margin-top: 2%;
     margin-bottom: 2%;
     font-size: small;
 }
 
-/*#################################### CAMERA CSS ####################################*/
-.camera-table {
+/*#################################### Table CSS ####################################*/
+table {
     width: 100%;
-    border: solid 1px gray;
-    border-collapse: collapse;
-    border-spacing: 0;
+    table-layout: fixed;
 }
 
-.camera-table thead th {
-    border: solid 1px gray;
-    color: black;
-    padding: 10px;
+.tbl-header {
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+.tbl-content {
+    height: 25vh;
+    overflow-x: auto;
+    margin-top: 0px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.tbl-content-large {
+    height: 55vh;
+    overflow-x: auto;
+    margin-top: 0px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+th {
+    padding: 20px 15px;
     text-align: left;
-    width: 18vw;
+    font-weight: 500;
+    font-size: 12px;
+    text-transform: uppercase;
 }
 
-.camera-table tbody td {
-    border: solid 1px gray;
-    color: #333;
-    padding: 10px;
-    width: 18vw;
+td {
+    padding: 15px;
+    text-align: left;
+    vertical-align: middle;
+    font-weight: 300;
+    font-size: 12px;
+    border-bottom: solid 1px rgba(255, 255, 255, 0.1);
 }
 
-.camera-table tbody {
-    height: 30vh;
-    overflow-y: auto;
-    overflow-x: hidden;
+
+::-webkit-scrollbar {
+    width: 6px;
 }
 
-.camera-table tbody,
-thead {
-    display: flex;
-    flex-direction: column;
-    
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
-.camera-list-long tbody{
-    height: 60vh;
+::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
+
 /*########################################################################*/
 
 .panel-camera {
@@ -708,10 +721,11 @@ thead {
 .panel-camera-container-top-search input {
     background-color: white;
     background-image: url('../Images/search-icon.png');
-    height: 20px;
-    background-position: 3px;
+    height: 25px;
+    background-position: 95%;
     background-repeat: no-repeat;
-    padding-left: 30px;
+    padding-left: 5px;
+    padding-right: 30px;
 }
 
 .panel-camera-container-table {
