improved navigation and integrated search

--- a/Styles/main.css
+++ b/Styles/main.css
@@ -15,9 +15,46 @@ Colors for wireframe:
     src: url('../Fonts/RobotoSerif/RobotoSerif-VariableFont_GRAD\,opsz\,wdth\,wght.ttf');
 }
 
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+a {
+    color: #000;
+    /* for browsers that don't support 'inherit' as a color value */
+    color: inherit;
+    text-decoration: none;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
 * {
     margin: 0;
     font-family: "ROBOTO-SERIF";
+}
+
+
+h1 {
+    font-weight: 600;
 }
 
 .main {
@@ -31,6 +68,20 @@ Colors for wireframe:
     width: 85vw;
     height: 100vh;
     transition: width 0.3s ease;
+}
+
+.coming-soon {
+    height: 95%;
+    width: 95%;
+    background-color: #D9D9D9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.coming-soon-header {
+    margin-bottom: 50px;
 }
 
 /*################# SIDEBAR #################*/
@@ -54,6 +105,8 @@ Colors for wireframe:
     justify-content: center;
     height: 12.85vh;
 }
+
+
 
 .menu-options-home-dashboard-icon-img {
     display: flex;
@@ -87,8 +140,15 @@ Colors for wireframe:
     align-items: start;
 }
 
+.menu-options button{
+    background-color: transparent;
+    border: none;
+    display: flex;
+    align-items: center;    
+}
+
 .menu-options img {
-    width: 40%;
+    width: 50%;
 }
 
 .menu-options-home {
@@ -101,6 +161,8 @@ Colors for wireframe:
     justify-content: space-evenly;
     transition: width 0.3s ease;
 }
+
+
 
 .menu-options-home-label {
     display: flex;
@@ -391,8 +453,17 @@ h2 {
 
 .panel {
     display: flex;
+    justify-content: center;
+    align-items: center;
     width: 85vw;
     height: 77vh;
+
+    /*Animation*/
+    opacity:0; 
+    animation:fadeInAnimation ease-in 1; 
+    animation-fill-mode:forwards;
+    animation-duration: 0.2s;
+    animation-delay: 0.1s
 }
 
 .panel-information {
@@ -651,7 +722,7 @@ table {
 }
 
 .tbl-content-large {
-    height: 55vh;
+    height: 50vh;
     overflow-x: auto;
     margin-top: 0px;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -697,6 +768,14 @@ td {
     width: 50%;
 }
 
+.panel-mycamera {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
 .panel-camera-container {
     width: 95%;
     height: 97%;
@@ -712,6 +791,11 @@ td {
 
 .panel-camera-container-top-title {
     margin: 2%;
+}
+
+.panel-camera-container-top-title h1 {
+    font-weight: 500;
+    /*Defines from thin to thick characters. 400 is the same as normal, and 700 is the same as bold*/
 }
 
 .panel-camera-container-top-search {
@@ -730,6 +814,10 @@ td {
 
 .panel-camera-container-table {
     margin: 2%;
+}
+
+.panel-mycamera-container-table {
+    margin: 1%;
 }
 
 
