--- a/Public/Styles/main.css
+++ b/Public/Styles/main.css
@@ -11,8 +11,8 @@ Colors for wireframe:
 
 @font-face {
     font-family: 'ROBOTO-SERIF';
-    src: url('../../Fonts/RobotoSerif/RobotoSerif-Italic-VariableFont_GRAD\,opsz\,wdth\,wght.ttf');
-    src: url('../../Fonts/RobotoSerif/RobotoSerif-VariableFont_GRAD\,opsz\,wdth\,wght.ttf');
+    src: url('../Fonts/RobotoSerif/RobotoSerif-Italic-VariableFont_GRAD\,opsz\,wdth\,wght.ttf');
+    src: url('../Fonts/RobotoSerif/RobotoSerif-VariableFont_GRAD\,opsz\,wdth\,wght.ttf');
 }
 
 @keyframes fadeInAnimation {
@@ -109,7 +109,7 @@ h1 {
 
 .logo-nav-logo {
     width: 70%;
-    background-image: url("../../Images/safe-forest.png");
+    background-image: url("../Images/safe-forest.png");
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -124,7 +124,7 @@ h1 {
     border: none;
     width: 100%;
     height: 100%;
-    background-image: url("../../Images/hamburger-logo.png");
+    background-image: url("../Images/hamburger-logo.png");
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -809,7 +809,7 @@ td {
 
 .panel-camera-container-top-search input {
     background-color: white;
-    background-image: url('../../Images/search-icon.png');
+    background-image: url('../Images/search-icon.png');
     height: 25px;
     background-position: 95%;
     background-repeat: no-repeat;
