--- a/Public/Styles/main.css
+++ b/Public/Styles/main.css
@@ -1049,3 +1049,7 @@ td {
     color: gray;
     font-size: small;
 }
+
+/*################# END AUTHENTICATION PAGE #################*/
+/*#######################################################*/
+
