--- a/Public/Styles/main.css
+++ b/Public/Styles/main.css
@@ -1065,13 +1065,82 @@ td {
 
 
 .panel-general-account {
+    background-color: #CDCDCD;
+    width: 95%;
+    height: 97%;
+}
+
+.panel-general-account-title {
+    width: 30w;
+    margin-left: 3%;
+    margin-top: 4%;
+}
+
+.panel-general-account-inputs {
+    width: 81%;
+    height: 78%;
     display: flex;
     flex-direction: column;
-    background-color: #CDCDCD;
-    border-radius: 5px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    width: 90%;
-    height: 90%;
+    justify-content: space-evenly;
+    font-size: 16px;
+    padding-left: 7%;
+}
+
+.panel-general-account-inputs input[type="text"] {
+    width: 95%;
+    padding: 1%;
+}
+
+.panel-general-account-inputs-names input[type="text"] {
+    width: 30vw;
+    height: 50%;
+    padding: 1%;
+}
+
+.panel-general-account-inputs-names {
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+}
+
+.panel-general-account-country {
+    width: 97%;
+}
+
+.panel-general-account-country select {
+    width: 100%;
+    height: 67%;
+    padding: 8px;
+    border: 1px solid #000000;
+    border-radius: 0px;
+    background-color: #fff;
+}
+
+
+.panel-general-account-upload-logo {
+    margin-bottom: 20px;
+}
+
+
+.panel-general-account-button {
+    width: 20%;
+    height: 9%;
+    padding-left: 80%;
+    font-size: 10px;
+}
+
+.panel-general-account-button button {
+    width: 80%;
+    height: 50%;
+    font-size: 1.15vw;
+    background-color: #EAEAEA;
+    color: #000000;
+    border: none;
+    cursor: pointer;
+}
+
+.panel-general-account-button button:hover {
+    background-color: #D9D9D9;
 }
 
 
